data/derived/comb/progs/unify/prog6188.ml.out
Characters 65-72:
  let stringOfList f l = sepConcat (sepConcat ";" (List.map f l)) ["[","]"];;
                                                                   ^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
